--- a/monitor_server/Cargo.toml
+++ b/monitor_server/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["various3211workd <kd1229568@st.kobedenshi.ac.jp>"]
 edition = "2018"
 
 [dependencies]
+diesel = { version = "0.15.0", features = ["sqlite"] }
+diesel_codegen = { version = "0.15.0", features = ["sqlite"] }
+dotenv = "0.9.0"
